--- a/comprar.html
+++ b/comprar.html
@@ -106,7 +106,7 @@
       </div>
       <div class="col-md-6 ">
         <label for="inputCity" class="form-label" >Cantidad</label>
-        <input type="text" class="form-control" id="cantidadDeTicket" placeholder="Cantidad">
+        <input type="number" class="form-control" id="cantidadDeTicket" placeholder="Cantidad">
       </div>
       <div class="col-md-6 ">
         <label for="categoria" class="form-label">Categoría</label>
