--- a/comprar.html
+++ b/comprar.html
@@ -102,7 +102,7 @@
      
       <div class="col-12">
         
-        <input type="text" class="form-control" id="mail" placeholder="Correo"  >
+        <input type="email" class="form-control" id="mail" placeholder="Correo"  >
       </div>
       <div class="col-md-6 ">
         <label for="inputCity" class="form-label" >Cantidad</label>
